DNS/DNS01 - FAIL/Pi-Hole/k3s/manifests/ingress.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-danielrailsback-extname
  annotations:
    external-dns.alpha.kubernetes.io/hostname: pi-hole.danielrailsback.com
    external-dns.alpha.kubernetes.io/ttl: "300"
  labels:
    app.kubernetes.io/instance: pi-hole-ce
spec:
  type: ExternalName
  externalName: kube.danielrailsback.com
  sessionAffinity: None
---
apiVersion: v1
kind: Service
metadata:
  name: pi-hole-ce
  labels:
    run: pi-hole-ce
spec:
  type: ClusterIP
  ports:
  - name: web
    port: 8080
    protocol: TCP
  - name: jnlp-agents
    port: 50000
    protocol: TCP
  selector:
    run: pi-hole-ce
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dns01-danielraailsback-web
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`dns01.danielrailsback.com`)
      kind: Rule
      services:
        - name: pi-hole
          port: 8080
      middlewares:
        - name: http-https-redirectscheme
          namespace: pi-hole
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: pihole-danielrailsback
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dns01.danielrailsback.com`)
      kind: Rule
      services:
        - name: pi-hole
          port: 8080
